--- a/C - Ad Classifier/8_EURES_shortening.ipynb
+++ b/C - Ad Classifier/8_EURES_shortening.ipynb
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masterarbeit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,9 +252,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "cb0bef7a9eff8501420d8e3c6496920c898020e76359dc7d7e37d89f971fe60a"
@@ -262,5 +261,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
