--- a/E - SBERT Model Training/19_TRAINING_EVALUATION.ipynb
+++ b/E - SBERT Model Training/19_TRAINING_EVALUATION.ipynb
@@ -1427,7 +1427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "masterarbeit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1441,10 +1441,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.16"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
