added llm prompt experiments

--- a/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
+++ b/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -71,7 +71,28 @@
     "id": "nSJ_xOTyNe79",
     "outputId": "1bf2344e-6aa9-4771-ac7d-dd4cce459371"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1057171/1460843178.py:3: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
+      "  from IPython.core.display import display, HTML\n",
+      "[nltk_data] Downloading package punkt to /home/roj14702/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
     "from datetime import datetime\n",
@@ -108,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -164,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -190,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -212,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -282,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -303,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 2104,
@@ -333,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -351,7 +372,18 @@
     "id": "QE5A4LArONyu",
     "outputId": "21864e40-1b76-4e6e-b0f2-879d4e9031f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available model: gbert_batch32_woTSDAE_2e-05_f10\n",
+      "Available model: jobgbert_TSDAE_epochs5\n",
+      "Available model: jobgbert_batch32_woTSDAE_2e-05_f10\n",
+      "Available model: gbert_TSDAE_epochs5\n"
+     ]
+    }
+   ],
    "source": [
     "for model in os.listdir(prefix_path):\n",
     "  print(f\"Available model: {model}\")"
@@ -359,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -406,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -420,7 +452,206 @@
     },
     "id": "cbQmmDTzfEvS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Model jobgbert_batch32_woTSDAE_2e-05_f10/\n",
+      "dict_keys(['skillsets', 'desc', 'jobtitle', 'adcentroid_filtered', 'adcentroid_unfiltered', 'job_centroid'])\n",
+      "Creating Embeddings.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99ffb83f2f844d5b93c6ca054ff8d9a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/71 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished creating Embeddings. Evaluating.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 2250/2250 [00:01<00:00, 1358.63it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>textkind</th>\n",
+       "      <th>embedding_kind</th>\n",
+       "      <th>MRR</th>\n",
+       "      <th>missing</th>\n",
+       "      <th>max_similarity</th>\n",
+       "      <th>MRR@</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jobgbert_batch32_woTSDAE_2e-05_f10</td>\n",
+       "      <td>embeddings_short</td>\n",
+       "      <td>job_centroid</td>\n",
+       "      <td>0.433598</td>\n",
+       "      <td>0.105778</td>\n",
+       "      <td>tensor(0.9398)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                model          textkind embedding_kind  \\\n",
+       "0  jobgbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
+       "\n",
+       "        MRR   missing  max_similarity  MRR@  \n",
+       "0  0.433598  0.105778  tensor(0.9398)   100  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Model gbert_batch32_woTSDAE_2e-05_f10/\n",
+      "dict_keys(['skillsets', 'desc', 'adcentroid_filtered', 'adcentroid_unfiltered', 'job_centroid'])\n",
+      "Creating Embeddings.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b5a9fd82d106418bbad6a81650d1504d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/71 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished creating Embeddings. Evaluating.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 2250/2250 [00:01<00:00, 1377.86it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>textkind</th>\n",
+       "      <th>embedding_kind</th>\n",
+       "      <th>MRR</th>\n",
+       "      <th>missing</th>\n",
+       "      <th>max_similarity</th>\n",
+       "      <th>MRR@</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jobgbert_batch32_woTSDAE_2e-05_f10</td>\n",
+       "      <td>embeddings_short</td>\n",
+       "      <td>job_centroid</td>\n",
+       "      <td>0.433598</td>\n",
+       "      <td>0.105778</td>\n",
+       "      <td>tensor(0.9398)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gbert_batch32_woTSDAE_2e-05_f10</td>\n",
+       "      <td>embeddings_short</td>\n",
+       "      <td>job_centroid</td>\n",
+       "      <td>0.414569</td>\n",
+       "      <td>0.123111</td>\n",
+       "      <td>tensor(0.9497)</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                model          textkind embedding_kind  \\\n",
+       "0  jobgbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
+       "1     gbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
+       "\n",
+       "        MRR   missing  max_similarity  MRR@  \n",
+       "0  0.433598  0.105778  tensor(0.9398)   100  \n",
+       "1  0.414569  0.123111  tensor(0.9497)   100  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "MRR = []\n",
     "MRR_AT = 100\n",
@@ -432,8 +663,8 @@
     "    model = SentenceTransformer(model_path)\n",
     "    embeddings = encode_jobs(model)\n",
     "  else:\n",
-    "    model = SentenceTransformer(f\"../00_data/SBERT_Models/Models{model_path}\")\n",
-    "    embeddings = load_pickle(f\"../00_data/SBERT_Models/Models{model_path}embeddings.pkl\")\n",
+    "    model = SentenceTransformer(f\"../00_data/SBERT_Models/models/{model_path}\")\n",
+    "    embeddings = load_pickle(f\"../00_data/SBERT_Models/models/{model_path}embeddings.pkl\")\n",
     "  print(embeddings.keys())\n",
     "  print(\"Creating Embeddings.\")\n",
     "  encodings_short = model.encode(list(testads[\"short_texts\"]), show_progress_bar=True)\n",
@@ -470,7 +701,7 @@
     "                  \"MRR\":np.mean(ranks), \"missing\":missing, \"max_similarity\": max_similarity, \"MRR@\":MRR_AT})\n",
     "      df = pd.DataFrame(MRR).sort_values(by=[\"MRR\"], ascending=[False]).reset_index(drop=True)\n",
     "      display(df)\n",
-    "      df.to_excel(f\"../00_data/SBERT_Models/Evaluation/{currently}_evaluation.xlsx\")"
+    "      df.to_excel(f\"../00_data/SBERT_Models/evaluation/{currently}_evaluation.xlsx\")"
    ]
   },
   {
