--- a/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
+++ b/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
@@ -50,20 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "AkkomPGdV3dV"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\lw\\miniconda3\\envs\\masterarbeit_lwo\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer, InputExample\n",
     "from torch.utils.data import DataLoader\n",
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "722fJkSlB-VR"
    },
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "3pcrar0nWJqC"
    },
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "QEF97EZFt6LY"
    },
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "rNJLBve_WiNK"
    },
@@ -146,7 +137,7 @@
    "source": [
     "if modelname == \"agne/jobgbert\":\n",
     "  TSDAE = \"woTSDAE\"\n",
-    "elif modelname == \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\"\n",
+    "elif modelname == \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\":\n",
     "  TSDAE = \"wTSDAE\"\n",
     "else:\n",
     "  raise TypeError"
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -173,7 +164,18 @@
     "id": "c5g4imwtpy2z",
     "outputId": "0fa97fe8-055b-462c-f42f-f7f39439dbb0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../00_data/SBERT_Models/models/jobgbert_batch16_wTSDAE_2e-05_f10'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch_size = 16\n",
     "lr = 2e-5\n",
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "hWnxsnraA76J"
    },
@@ -196,11 +198,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "Ux1alEzQBIY4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pos_pairs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m training_start \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(datetime\u001b[38;5;241m.\u001b[39mnow())\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39misdigit()])\n\u001b[1;32m      4\u001b[0m max_MRR \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch, (train_index, dev_index) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(kf\u001b[38;5;241m.\u001b[39msplit(\u001b[43mpos_pairs\u001b[49m)):\n\u001b[1;32m      8\u001b[0m   pos_train_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m train_index]\n\u001b[1;32m      9\u001b[0m   pos_dev_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m dev_index]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pos_pairs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "MRR = []\n",
     "MRR_AT = 100\n",
